# sn-notif-lint

./: CHANGELOG.md  README.md  pyproject.toml
src/notiflint/: __init__.py  cli.py  lint.py  parse.py  suggest.py
tests/: test_cli.py  test_lint.py  test_parse.py  test_suggest.py
